[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cloc"
version = "0.1.0"
authors = [
  { name="Parth Acharya", email="parthacharya@protonmail.com" }
]
description = "A simple CLI tool to count lines of code of your files"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
keywords = ["pycloc", "cloc", "py-cloc", "loc"]

[project.urls]
Repository = "https://github.com/parthacharyaaaaa/cloc"
Issues = "https://github.com/parthacharyaaaaa/cloc/issues"

[project.scripts]
pycloc = "cloc.__main__:main"

[[tool.setuptools.ext-modules]] 
name = "cloc.parsing.extensions._parsing"
sources = ["cloc/parsing/extensions/_parsing.c",
           "cloc/parsing/extensions/_parsing_primitives.c",
           "cloc/parsing/extensions/_comment_data.c"]
py-limited-api = true