[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "locstat"
dynamic = ["version"]
authors = [
  { name="Parth Acharya", email="parthacharya@protonmail.com" }
]
description = "CLI tool to count lines of code"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
keywords = ["locstat", "locstat", "py-locstat", "loc"]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.urls]
Repository = "https://github.com/parthacharyaaaaa/locstat"
Issues = "https://github.com/parthacharyaaaaa/locstat/issues"

[project.scripts]
locstat = "locstat.__main__:_run_guarded"

[tool.setuptools.dynamic]
version = { attr = "locstat.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["locstat*"]

[[tool.setuptools.ext-modules]]
name = "locstat.parsing.extensions._parsing"
sources = ["locstat/parsing/extensions/_parsing.c",
           "locstat/parsing/extensions/_parsing_primitives.c",
           "locstat/parsing/extensions/_comment_data.c"]
py-limited-api = true

[tool.setuptools.package-data]
locstat = ["languages.json", "config.toml"]
